# bsh

./: .gitignore  CMakeLists.txt  Makefile  README.md  command.cpp  command.h  main.cpp  utils.cpp  utils.h
.github/workflows/: cmake.yml
src/: command.cpp  command.h  globals.h  main.cpp  structs.h  utils.cpp  utils.h
src/builtins/: about.cpp  about.h  cd.cpp  cd.h  export.cpp  export.h  history.cpp  history.h  vars.cpp  vars.h
src/commands/: about.h  cd.cpp  cd.h
src/core/: command.cpp  command.h  completions.cpp  completions.h  context.h
src/history/: history.cpp  history.h
src/utils/: config.cpp  config.h  globals.h  utils.cpp  utils.h
